// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Feature - Filter Section should display the given title in the header 1`] = `
<pf-filter-section
  clear={[Function EventEmitter]}
  collapsed="undefined"
  cssReplacementRegex={[Function RegExp]}
  filter={[Function Object]}
  filterTypes={[Function Object]}
  maxOptions={[Function Number]}
  persistedCollapsedSetting={[Function String]}
  persistedCollapsedSetting$={[Function Observable]}
  search={[Function EventEmitter]}
  searchValueChanged={[Function EventEmitter]}
  settingsService={[Function Object]}
  showLess={[Function EventEmitter]}
  showMore={[Function EventEmitter]}
>
  <div
    class="filter"
  >
    <div
      class="header"
    >
      <div
        class="header-left"
        title="Job Title/Code"
      >
        <span
          class="ellipsis-overflowing-text"
        >
           Job Title/Code 
          
        </span>
        
        
      </div>
      <div
        class="header-right"
      >
        
        <div
          class="clear-link au-btn-clear-au-txt-job-title"
        >
          
          
          
          
          Clear
        </div>
        
      </div>
    </div>
    
    <div>
      
      <div
        class="content"
      >
        
      </div>
    </div>
  </div>
</pf-filter-section>
`;

exports[`Search Feature - Filter Section should display the transcluded content 1`] = `
<ng-component
  filter={[Function Object]}
>
  <pf-filter-section>
    <div
      class="filter"
    >
      <div
        class="header"
      >
        <div
          class="header-left"
          title="Job Title/Code"
        >
          <span
            class="ellipsis-overflowing-text"
          >
             Job Title/Code 
            
          </span>
          
          
        </div>
        <div
          class="header-right"
        >
          
          <div
            class="clear-link au-btn-clear-au-txt-job-title"
          >
            
            
            
            
            Clear
          </div>
          
        </div>
      </div>
      
      <div>
        
        <div
          class="content"
        >
          <h1>
            Transclusion Works!
          </h1>
          
        </div>
      </div>
    </div>
  </pf-filter-section>
</ng-component>
`;

exports[`Search Feature - Filter Section should show a fa-angle-down icon in the header, when collapsed 1`] = `
<pf-filter-section
  clear={[Function EventEmitter]}
  collapsed="undefined"
  cssReplacementRegex={[Function RegExp]}
  filter={[Function Object]}
  filterTypes={[Function Object]}
  maxOptions={[Function Number]}
  persistedCollapsedSetting={[Function String]}
  persistedCollapsedSetting$={[Function Observable]}
  search={[Function EventEmitter]}
  searchValueChanged={[Function EventEmitter]}
  settingsService={[Function Object]}
  showLess={[Function EventEmitter]}
  showMore={[Function EventEmitter]}
>
  <div
    class="filter"
  >
    <div
      class="header"
    >
      <div
        class="header-left"
        title="Job Title/Code"
      >
        <span
          class="ellipsis-overflowing-text"
        >
           Job Title/Code 
          
        </span>
        
        
      </div>
      <div
        class="header-right"
      >
        
        <div
          class="clear-link au-btn-clear-au-txt-job-title"
        >
          
          
          
          
          Clear
        </div>
        
      </div>
    </div>
    
    <div>
      
      <div
        class="content"
      >
        
      </div>
    </div>
  </div>
</pf-filter-section>
`;

exports[`Search Feature - Filter Section should show a search icon and show more link, when the filter is a multi select,
      not singled, and the number of options is >= the max 1`] = `
<pf-filter-section
  clear={[Function EventEmitter]}
  collapsed="undefined"
  cssReplacementRegex={[Function RegExp]}
  filter={[Function Object]}
  filterTypes={[Function Object]}
  maxOptions={[Function Number]}
  persistedCollapsedSetting={[Function String]}
  persistedCollapsedSetting$={[Function Observable]}
  search={[Function EventEmitter]}
  searchValueChanged={[Function EventEmitter]}
  settingsService={[Function Object]}
  showLess={[Function EventEmitter]}
  showMore={[Function EventEmitter]}
  singled="false"
>
  <div
    class="filter"
  >
    <div
      class="header"
    >
      <div
        class="header-left"
        title="Publisher"
      >
        <span
          class="ellipsis-overflowing-text"
        >
           Publisher 
          
        </span>
        
        
      </div>
      <div
        class="header-right"
      >
        
        <div
          class="clear-link au-btn-clear-au-chk-publisher"
        >
          
          
          Clear (5)
          
          
        </div>
        
        <div
          class="search au-btn-search-au-chk-publisher"
        >
          <fa-icon />
        </div>
      </div>
    </div>
    
    <div>
      
      <div
        class="content"
      >
        
        <div
          class="d-flex"
        >
          <div
            class="show-more-or-less-link"
          >
            Show More
          </div>
          
        </div>
      </div>
    </div>
  </div>
</pf-filter-section>
`;
